# Norma-CR

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  git_tools.py  main.py  pyproject.toml
.baidu-cc/: meta.json
coding-standards/: README.md  registry.yaml
coding-standards/profiles/: default.yaml
coding-standards/rules/go/: GO-CONC-001.md  GO-ERROR-002.md  GO-SEC-001.md  GO-STYLE-001.md  GO-STYLE-002.md  GO-STYLE-003.md  GO-STYLE-004.md  GO-STYLE-005.md  GO-STYLE-006.md  GO-STYLE-007.md  GO-STYLE-008.md  GO-STYLE-009.md  GO-STYLE-010.md
coding-standards/rules/python/: PY-TEST-001.md  PY-UNICODE-002.md
cr_agent/: __init__.py  file_review.py  models.py  reporting.py
cr_agent/rules/: __init__.py  loader.py
cr_reports/: cr_report.html
docs/: eval.md  rules.md  usage.md
nova_cr_agent/: __init__.py
src/cr_agent/: config.py  context_refiner.py  file_review.py  metrics.py  models.py  reporting.py
src/cr_agent/rules/: __init__.py  loader.py
src/tools/: check_diff.py  git_tools.py  list_rules.py
tests/: test_rules_loader.py
tools/: git_tools.py
