[project]
name = "nova-cr-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim>=0.8.1",
    "mcp>=1.0.0",
    "python-dotenv>=1.2.1",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "argcomplete>=3.0.0",
    "pydantic-ai>=1.30.1",
    "gitpython>=3.1.45",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
